axe header contrast fix

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: purple;
+  background-color: black;
   margin-bottom: 1.45rem;
 }
 
